--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <!-- Required meta tags -->
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Scanner{% endblock %}</title>
         <link rel="icon" href="{{ asset('build/favicon.ico') }}">
